// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorization - Base policy Anonymous access 1`] = `
{
  "errors": [
    {
      "message": "Access to Query.bp_foo is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Access to Query.bp_bar is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Access to Query.bp_baz is unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    },
    {
      "message": "Access to Qyz.wer is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_qyz",
        "wer"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": null,
    "bp_taz": "TAZ",
    "bp_qyz": null
  }
}
`;

exports[`Authorization - Base policy JWT pass all policies 1`] = `
Object {
  "bp_bar": "BAR",
  "bp_baz": "BAZ",
  "bp_foo": "FOO",
  "bp_qyz": Object {
    "wer": "WER",
  },
  "bp_taz": "TAZ",
}
`;

exports[`Authorization - Base policy JWT pass base and regular policy 1`] = `
{
  "errors": [
    {
      "message": "Access to Query.bp_baz is unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    }
  ],
  "data": {
    "bp_foo": "FOO",
    "bp_bar": "BAR",
    "bp_baz": null,
    "bp_taz": "TAZ",
    "bp_qyz": {
      "wer": "WER"
    }
  }
}
`;

exports[`Authorization - Base policy JWT pass none of policies 1`] = `
{
  "errors": [
    {
      "message": "Access to Query.bp_foo is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Access to Query.bp_bar is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Access to Query.bp_baz is unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    },
    {
      "message": "Access to Qyz.wer is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_qyz",
        "wer"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": null,
    "bp_taz": "TAZ",
    "bp_qyz": null
  }
}
`;

exports[`Authorization - Base policy JWT pass only base policy 1`] = `
{
  "errors": [
    {
      "message": "Access to Query.bp_bar is unauthorized by policy \\"regular_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Access to Query.bp_baz is unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    }
  ],
  "data": {
    "bp_foo": "FOO",
    "bp_bar": null,
    "bp_baz": null,
    "bp_taz": "TAZ",
    "bp_qyz": {
      "wer": "WER"
    }
  }
}
`;

exports[`Authorization - Base policy JWT pass only override policy 1`] = `
{
  "errors": [
    {
      "message": "Access to Query.bp_foo is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Access to Query.bp_bar is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Access to Qyz.wer is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_qyz",
        "wer"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": "BAZ",
    "bp_taz": "TAZ",
    "bp_qyz": null
  }
}
`;

exports[`Authorization - Base policy JWT pass only regular policy 1`] = `
{
  "errors": [
    {
      "message": "Access to Query.bp_foo is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Access to Query.bp_bar is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Access to Query.bp_baz is unauthorized by policy \\"override_base_policy\\" in namespace \\"auth_bp\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_baz"
      ]
    },
    {
      "message": "Access to Qyz.wer is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_qyz",
        "wer"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": null,
    "bp_taz": "TAZ",
    "bp_qyz": null
  }
}
`;

exports[`Authorization - Base policy JWT pass regular and override policy 1`] = `
{
  "errors": [
    {
      "message": "Access to Query.bp_foo is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_foo"
      ]
    },
    {
      "message": "Access to Query.bp_bar is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_bar"
      ]
    },
    {
      "message": "Access to Qyz.wer is unauthorized by policy \\"base_policy\\" in namespace \\"internal\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "bp_qyz",
        "wer"
      ]
    }
  ],
  "data": {
    "bp_foo": null,
    "bp_bar": null,
    "bp_baz": "BAZ",
    "bp_taz": "TAZ",
    "bp_qyz": null
  }
}
`;
